[gd_scene load_steps=28 format=3 uid="uid://dfwtal43fxg01"]

[ext_resource type="PackedScene" uid="uid://wfbhut8n2ico" path="res://Components/ingredient.tscn" id="1_wlmam"]
[ext_resource type="Texture2D" uid="uid://cwonw108svgyp" path="res://Images/Ingredients/FancyApple.webp" id="2_2dmkj"]
[ext_resource type="Texture2D" uid="uid://c2fyvo2wvrewq" path="res://Images/Ingredients/FancyEgg.webp" id="3_ydjp1"]
[ext_resource type="Texture2D" uid="uid://cj31f2y36gobr" path="res://Images/Ingredients/FieryHerb.webp" id="4_dqmjl"]
[ext_resource type="Texture2D" uid="uid://dltjk78lwb0sh" path="res://Images/Ingredients/GreengrassCorn.webp" id="5_dmusj"]
[ext_resource type="Texture2D" uid="uid://cl4nmlpjrxivm" path="res://Images/Ingredients/GreengrassSoybean.webp" id="6_k5yh4"]
[ext_resource type="Texture2D" uid="uid://datyllxh46js6" path="res://Images/Ingredients/Honey.webp" id="7_wg3g3"]
[ext_resource type="Texture2D" uid="uid://prvg845vjos7" path="res://Images/Ingredients/LargeLeek.webp" id="8_qixsi"]
[ext_resource type="Texture2D" uid="uid://oc8ck6315kgg" path="res://Images/Ingredients/MoomooMilk.webp" id="9_lpaym"]
[ext_resource type="Texture2D" uid="uid://dtito0v8tbto0" path="res://Images/Ingredients/PureOil.webp" id="10_yiwl2"]
[ext_resource type="Texture2D" uid="uid://jiciykbyr242" path="res://Images/Ingredients/SlowpokeTail.webp" id="11_fm64m"]
[ext_resource type="Texture2D" uid="uid://53lfecwksajo" path="res://Images/Ingredients/SnoozyTomato.webp" id="12_qrwms"]
[ext_resource type="Texture2D" uid="uid://bwf74xhe4iwv0" path="res://Images/Ingredients/SoftPotato.webp" id="13_5gjfr"]
[ext_resource type="Texture2D" uid="uid://d4c7ue0b551lu" path="res://Images/Ingredients/SoothingCacao.webp" id="14_rixum"]
[ext_resource type="Texture2D" uid="uid://dnondo0smchuk" path="res://Images/Ingredients/TastyMushroom.webp" id="15_qxgb4"]
[ext_resource type="Texture2D" uid="uid://hc370f03s6bj" path="res://Images/Ingredients/WarmingGinger.webp" id="16_21vmw"]
[ext_resource type="Script" path="res://Scenes/Inventory.gd" id="18_kl6p6"]
[ext_resource type="PackedScene" uid="uid://8insc0cf2tsm" path="res://Components/category_handler.tscn" id="19_5utj8"]
[ext_resource type="Script" path="res://Scenes/GameHandler.gd" id="20_g23vq"]
[ext_resource type="Texture2D" uid="uid://c7hsk41raxixs" path="res://Styles/Buttons/bag.png" id="20_ib2xt"]
[ext_resource type="PackedScene" uid="uid://biws6myxx57w5" path="res://Components/cooking_pot.tscn" id="21_oebyx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg51v"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(0.996094, 0.996094, 0.996094, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.785156, 0.667969, 0.484375, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_meffj"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(0.992157, 0.882353, 0.835294, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.785156, 0.667969, 0.484375, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utr0g"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(0.207843, 0.0705882, 0.0117647, 0.0980392)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.785156, 0.667969, 0.484375, 1)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xiyn7"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 2.0
bg_color = Color(0.929412, 0.929412, 0.792157, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 1.0
expand_margin_right = 1.0
shadow_color = Color(0.785156, 0.667969, 0.484375, 1)
shadow_size = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_km4n8"]

[sub_resource type="LabelSettings" id="LabelSettings_ig3p1"]
font_color = Color(0.494118, 0.211765, 0.0627451, 1)

[node name="Game" type="Node2D"]
y_sort_enabled = true

[node name="IngredientSelection" type="CanvasLayer" parent="."]

[node name="FancyApple" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(96, 96)

[node name="IngredientSprite" parent="IngredientSelection/FancyApple" index="0"]
texture = ExtResource("2_2dmkj")

[node name="MoomooMilk" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(256, 96)

[node name="IngredientSprite" parent="IngredientSelection/MoomooMilk" index="0"]
texture = ExtResource("9_lpaym")

[node name="GreengrassSoybeans" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(416, 96)

[node name="IngredientSprite" parent="IngredientSelection/GreengrassSoybeans" index="0"]
texture = ExtResource("6_k5yh4")

[node name="Honey" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(576, 96)

[node name="IngredientSprite" parent="IngredientSelection/Honey" index="0"]
texture = ExtResource("7_wg3g3")

[node name="BeanSausage" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(96, 272)

[node name="WarmingGinger" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(256, 272)

[node name="IngredientSprite" parent="IngredientSelection/WarmingGinger" index="0"]
texture = ExtResource("16_21vmw")

[node name="SnoozyTomato" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(416, 272)

[node name="IngredientSprite" parent="IngredientSelection/SnoozyTomato" index="0"]
texture = ExtResource("12_qrwms")

[node name="FancyEgg" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(576, 272)

[node name="IngredientSprite" parent="IngredientSelection/FancyEgg" index="0"]
texture = ExtResource("3_ydjp1")

[node name="PureOil" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(96, 448)

[node name="IngredientSprite" parent="IngredientSelection/PureOil" index="0"]
texture = ExtResource("10_yiwl2")

[node name="SoftPotato" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(256, 448)

[node name="IngredientSprite" parent="IngredientSelection/SoftPotato" index="0"]
texture = ExtResource("13_5gjfr")

[node name="FieryHerb" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(416, 448)

[node name="IngredientSprite" parent="IngredientSelection/FieryHerb" index="0"]
texture = ExtResource("4_dqmjl")

[node name="GreengrassCorn" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(576, 448)

[node name="IngredientSprite" parent="IngredientSelection/GreengrassCorn" index="0"]
texture = ExtResource("5_dmusj")

[node name="SoothingCacao" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(96, 624)

[node name="IngredientSprite" parent="IngredientSelection/SoothingCacao" index="0"]
texture = ExtResource("14_rixum")

[node name="TastyMushroom" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(256, 624)

[node name="IngredientSprite" parent="IngredientSelection/TastyMushroom" index="0"]
texture = ExtResource("15_qxgb4")

[node name="LargeLeek" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(416, 624)

[node name="IngredientSprite" parent="IngredientSelection/LargeLeek" index="0"]
texture = ExtResource("8_qixsi")

[node name="SlowpokeTail" parent="IngredientSelection" instance=ExtResource("1_wlmam")]
position = Vector2(576, 624)

[node name="IngredientSprite" parent="IngredientSelection/SlowpokeTail" index="0"]
texture = ExtResource("11_fm64m")

[node name="Inventory" type="Node2D" parent="." groups=["inventory"]]
script = ExtResource("18_kl6p6")

[node name="GameHandler" type="Node2D" parent="."]
script = ExtResource("20_g23vq")

[node name="CategoryHandler" parent="." instance=ExtResource("19_5utj8")]

[node name="Bag" type="Sprite2D" parent="."]
position = Vector2(1247, 698)
scale = Vector2(0.25, 0.25)
texture = ExtResource("20_ib2xt")

[node name="ButtonReset" type="Button" parent="Bag"]
offset_left = 28.0
offset_top = -240.0
offset_right = 44.0
offset_bottom = -221.0
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_colors/font_disabled_color = Color(0.494118, 0.211765, 0.0627451, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_jg51v")
theme_override_styles/hover = SubResource("StyleBoxFlat_meffj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_utr0g")
theme_override_styles/disabled = SubResource("StyleBoxFlat_xiyn7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_km4n8")
disabled = true
text = "â†»"

[node name="IngredientAmount" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1267.0
offset_top = 666.0
offset_right = 1327.0
offset_bottom = 692.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "0"
label_settings = SubResource("LabelSettings_ig3p1")

[node name="CookingPot" parent="." instance=ExtResource("21_oebyx")]
position = Vector2(1144, 695)

[node name="CookingPotLid" parent="CookingPot/CookingPot" index="1"]
layout_mode = 0

[editable path="IngredientSelection/FancyApple"]
[editable path="IngredientSelection/MoomooMilk"]
[editable path="IngredientSelection/GreengrassSoybeans"]
[editable path="IngredientSelection/Honey"]
[editable path="IngredientSelection/BeanSausage"]
[editable path="IngredientSelection/WarmingGinger"]
[editable path="IngredientSelection/SnoozyTomato"]
[editable path="IngredientSelection/FancyEgg"]
[editable path="IngredientSelection/PureOil"]
[editable path="IngredientSelection/SoftPotato"]
[editable path="IngredientSelection/FieryHerb"]
[editable path="IngredientSelection/GreengrassCorn"]
[editable path="IngredientSelection/SoothingCacao"]
[editable path="IngredientSelection/TastyMushroom"]
[editable path="IngredientSelection/LargeLeek"]
[editable path="IngredientSelection/SlowpokeTail"]
[editable path="CookingPot"]
